added logic to UI

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -31,7 +31,7 @@
         </section>
     {{/if}}
 
-    <form id='new-comment-form' class='card'>
+    <form id='new-comment' class='card'>
         <div class='card-header'>
             <h3>Leave a comment</h3>
         </div>
