--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -2,12 +2,12 @@
     <div class='card-header'>
         <h2>Create New Post</h2>
     </div>
-    <form id='new-post-form' class='card-body'>
+    <form id='new-post' class='card-body'>
         <label class='form-label' for='post-title'>Title</label>
-        <input type='text' name='post-title' class='form-input' />
+        <input type='text' name='post-title' class='form-input' id="title"/>
 
         <label class='form-label' for='post-body'>Content</label>
-        <textarea name='post-body' class='form-input'></textarea>
+        <textarea name='post-body' class='form-input'id="body"></textarea>
 
         <button type='submit' class='btn'>Create</button>
     </form>
