--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,15 +2,15 @@
     <div class='card-header'>
         <h2>Sign Up</h2>
     </div>
-    <div id='signup' role='tabpanel'>
-        <form id='signup-form' class='card-body'>
+    <div id='signup-container' role='tabpanel'>
+        <form id='signup' class='card-body'>
             <div>
                 <label for='username-input-signup'>Username</label>
-                <input type='text' id='username-input-signup' />
+                <input type='text' id='username-signup' />
             </div>
             <div>
                 <label for='password-input-signup'>Password</label>
-                <input type='password' id='password-input-signup' />
+                <input type='password' id='password-signup' />
             </div>
             <button type='submit' id='signup-btn' class='btn'>Signup!</button>
             <a href='/login'>Login instead</a>
