--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,11 +6,11 @@
         <form id='signup' class='card-body'>
             <div>
                 <label for='username-input-signup'>Username</label>
-                <input type='text' id='username-signup' />
+                <input type='text' id='username-input-signup' />
             </div>
             <div>
                 <label for='password-input-signup'>Password</label>
-                <input type='password' id='password-signup' />
+                <input type='password' id='password-input-signup' />
             </div>
             <button type='submit' id='signup-btn' class='btn'>Signup!</button>
             <a href='/login'>Login instead</a>
