--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -3,11 +3,11 @@
         <h2>Create New Post</h2>
     </div>
     <form id='new-post-form' class='card-body'>
-        <label class='form-label' for='post-input-title'>Title</label>
-        <input type='text' id="post-input-title" name='post-title' class='form-input' />
+        <label class='form-label' for='post-title'>Title</label>
+        <input type='text' id='post-title' class='form-input' />
 
-        <label class='form-label' for='post-input-body'>Content</label>
-        <textarea name='post-body' id="post-input-body" class='form-input'></textarea>
+        <label class='form-label' for='post-body'>Post</label>
+        <textarea id='post-body' class='form-input'></textarea>
 
         <button type='submit' class='btn'>Create</button>
     </form>
